[gd_scene load_steps=14 format=3 uid="uid://bp3xia7sqhnwp"]

[ext_resource type="Script" path="res://Mobs/sinny_mob.gd" id="1_5obpj"]
[ext_resource type="PackedScene" uid="uid://dy1482m2psb43" path="res://health/health_component.tscn" id="2_556gj"]
[ext_resource type="Texture2D" uid="uid://dopkdvjt6bx7x" path="res://Спрайти/bad/minions/sinny.png" id="2_gs8l1"]
[ext_resource type="Script" path="res://Mobs/hurt_box_component.gd" id="4_uht6y"]
[ext_resource type="Script" path="res://Mobs/healthBar_enemy.gd" id="5_n3l56"]
[ext_resource type="PackedScene" uid="uid://dwd2yw4746xi2" path="res://money/coin_drop_component.tscn" id="6_v2w6p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6cdhw"]
atlas = ExtResource("2_gs8l1")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_j167f"]
atlas = ExtResource("2_gs8l1")
region = Rect2(80, 0, 70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_d4amk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cdhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j167f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t0nxs"]
radius = 304.237

[sub_resource type="CircleShape2D" id="CircleShape2D_xuqw8"]
radius = 36.0139

[sub_resource type="CircleShape2D" id="CircleShape2D_3khtf"]
radius = 52.0096

[sub_resource type="CircleShape2D" id="CircleShape2D_sdv2n"]
radius = 63.561

[node name="enemySinny" type="CharacterBody2D"]
z_index = 3
y_sort_enabled = true
script = ExtResource("1_5obpj")

[node name="HealthComponent" parent="." instance=ExtResource("2_556gj")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.66038, 1.66038)
sprite_frames = SubResource("SpriteFrames_d4amk")
autoplay = "default"
frame_progress = 0.280332

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_t0nxs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_xuqw8")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.429
autostart = true

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 4
script = ExtResource("4_uht6y")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_3khtf")

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_sdv2n")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.219608, 0.0705882, 1)
offset_left = -27.0
offset_top = 26.0
offset_right = 28.0
offset_bottom = 36.0
show_percentage = false
script = ExtResource("5_n3l56")

[node name="coinDrop" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_v2w6p")]
health_component = NodePath("../HealthComponent")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="HurtBoxComponent" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HurtBoxComponent" to="HurtBoxComponent" method="_on_area_entered"]
